# pidentify

./: .dockerignore  .gitignore  Dockerfile  run.sh
alembic/: env.py
pidentify/: app.py  cache.py  last_fm.py  logger.py  models.py  pyproject.toml  redis_client.py  spotify.py  sql_schemas.py
pidentify/db/: utils.py  (+2 more)
server/: Dockerfile  app.py  auth.py  cache.py  circular_buffer.py  config.py  exceptions.py  last_fm.py  main.py  models.py  pyproject.toml  redis_client.py  run.sh  spotify.py  sql_schemas.py  state_manager.py  ws_manager.py
server/alembic/: env.py
server/alembic/versions/: 2ac19077a11d_add_albums.py  42e92d3580a7_require_artist_and_album_on_track.py  6ffde3a1a95f_saved_to_library.py  ea656ca2045b_manual_history.py
server/background/: crons.py  sound.py
server/db/: __init__.py  sqlalchemy_context_client.py  utils.py
server/ipc/: broker.py  peer.py  state_peer.py  webserver_peer.py
server/music_id/: __init__.py  base.py
server/music_id/plugins/: shazam.py
server/rip_tool/: audio_data.py
server/rootfs/etc/cont-init.d/: 00-migrations  01-plugin-requirements
server/rootfs/etc/services.d/api/: run
server/rootfs/etc/services.d/recorder/: run
server/routes/: auth.py  history.py  rip_tool.py  settings.py  status.py
server/scripts/: install_plugin_requirements.py  run_api.sh  run_recorder.sh
server/static/: index.html
server/static/assets/: index-CL1uig_y.js  index-CN7xrOYd.css
server/utils/: combine_model.py  snake_to_camel.py
web/: .gitignore  Dockerfile  index.html  next.config.ts  package.json  tsconfig.json  vite.config.ts
(+118 files in other folders)
